Update JavaScript build instructions (#4032)

--- a/js/test/Common/controller.html
+++ b/js/test/Common/controller.html
@@ -1,40 +1,29 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Test Suite | Ice for JavaScript</title>
         <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <div id="header">
-            <nav class="top-bar" data-topbar>
-                <ul class="title-area">
-                    <li class="name">
-                        <h1><a href="#">Ice for JavaScript</a></h1>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <section role="main" id="body">
-            <div class="row">
-                <div class="large-12 medium-12 columns">
-                    <textarea id="clientConsole" class="disabled" height="300" readonly></textarea>
-                    <textarea id="serverConsole" class="disabled" height="100" readonly></textarea>
-                </div>
-            </div>
-        </section>
-        <div id="footer" class="show-for-medium-up">
-            <div class="logo">
-                <h4><strong>ZeroC</strong></h4>
-            </div>
-            <div class="copyright">
-                <h6>Copyright &copy; ZeroC, Inc.</h6>
-            </div>
-        </div>
+        <header id="header">
+            <h1><a href="#">Ice for JavaScript</a></h1>
+        </header>
+
+        <main id="body">
+            <textarea id="clientConsole" readonly></textarea>
+            <textarea id="serverConsole" readonly></textarea>
+        </main>
+
+        <footer id="footer">
+            <h4>ZeroC</h4>
+        </footer>
+
         <script type="module">
             import { runController } from "/test/Common/ControllerI.js";
-            document.addEventListener("DOMContentLoaded", (event) => {
+            document.addEventListener("DOMContentLoaded", () => {
                 runController(document.getElementById("clientConsole"), document.getElementById("serverConsole"));
             });
         </script>
